CSS structure simplified, colours changed to more modest ones.

--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div *ngIf="headerText || (progress.percentage < 100)" class="card-header w3-blue  w3-center">
+  <div *ngIf="headerText || (progress.percentage < 100)" class="card-header measurement-header  w3-center">
 
     <div><i class="fa fa-heartbeat"></i>
 
