--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -1,6 +1,6 @@
-<div class="card w3-light-gray">
+<div class="card">
 
-  <div class="card-header w3-blue  w3-center">
+  <div class="card-header measurement-header  w3-center">
 
 
     <div class="w3-center" i18n="Patient Medication History"><i class="fa fa-medkit"> </i>
@@ -62,7 +62,7 @@
 
   </div>
 
-  <div class="card-footer">
+  <div class="card-footer w3-white">
     <div class="w3-tiny w3-right">Scroll the timeline draging it with mouse. Zoom using Alt key + mouse scroll. Click
       chosen medication to view it's detail
     </div>
