--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header w3-light-blue  w3-center">
+  <div class="card-header info-header  w3-center">
 
 
     <span i18n="PatientData Info"><i class="fa fa-user"></i>
@@ -34,20 +34,20 @@
       <div class="row">
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
 
-          <div class=" text-primary w3-border-bottom  ">
+          <div class=" text-patient-info w3-border-bottom  ">
                       <span class="text-muted text-uppercase  font-weight-bold font-xs " i18n="Name">Name:
                       </span>
             {{patientData.name}}
           </div>
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
             <span class="text-muted text-uppercase  font-weight-bold font-xs " i18n="Id">ID:</span>
             {{patientData.id}}
           </div>
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="bloodType">
                     blood type:
                   </span>
@@ -56,7 +56,7 @@
         </div>
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="DOB">Date Of
                     Birth:
                   </span>
@@ -64,7 +64,7 @@
           </div>
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="height">
                     height:
                   </span>
@@ -72,7 +72,7 @@
           </div>
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="gender">
                     gender:
                   </span>
@@ -85,7 +85,7 @@
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                       <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="insurer">
                         Insurer:
                       </span>
@@ -93,7 +93,7 @@
           </div>
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="insurer ID">
                     Insurer ID:
                   </span>
@@ -101,7 +101,7 @@
           </div>
 
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="occupancy">
                     occupancy:
                   </span>
@@ -111,7 +111,7 @@
         </div>
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
 
-          <div class=" text-primary w3-border-bottom ">
+          <div class=" text-patient-info w3-border-bottom ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="lives alone">
                     lives alone:
                   </span>
@@ -120,7 +120,7 @@
 
           <div class="w3-border-bottom ">
 
-            <div class=" text-primary ">
+            <div class=" text-patient-info ">
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="Address">
                     Patient Address:
                   </span>
