--- a/src/app/modules/clinician-manager/clinician-manager.component.css
+++ b/src/app/modules/clinician-manager/clinician-manager.component.css
@@ -1,55 +1,39 @@
-.card {
+:host /deep/ .card {
   border-radius: 10px;
 
 }
 
-.card-footer {
+:host /deep/ .card-footer {
   border-radius: 10px;
 }
 
-.card-header {
+:host /deep/ .card-header {
   border-radius: 10px;
 }
 
-.card-footer {
+:host /deep/ .card-footer {
   padding: 0.25rem;
 }
 
-.card-block {
+:host /deep/ .card-block {
   padding: 0.25rem;
-
+  margin-bottom: -0.5rem;
 }
 
-.card-header {
+:host /deep/ .card-header {
   padding: 0.05rem;
 }
 
-.card {
+:host /deep/ .card {
   margin-bottom: 0.05rem;
 }
 
-
-.col-xs, .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-xl, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
+:host /deep/ .col-xs, .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-xl, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
 
-.no-float-table {
-  display: table;
-  width: 100%;
-}
 
-.no-float-row {
-  height: 100%;
-  width: 100%;
-  display: table-row
-}
-
-.no-float-cell {
-  height: 100%;
-  display: table-cell;
-  float: none;
-}
 
 input.selection {
   height: 20px !important;
@@ -57,7 +41,7 @@ input.selection {
 
 }
 
-.rowcontent {
+:host /deep/ .rowcontent {
   margin-bottom: 0;
   margin-top: 0;
   margin-left: 15px;
@@ -65,23 +49,84 @@ input.selection {
   text-align: center;
 }
 
+:host /deep/ .info-header {
+  background-color: #6f93c5;
+  color: white;
+}
 
-button {
-  padding: 0 0.3rem 0 0.3rem;
+:host /deep/ .text-patient-info {
+  color: #000000;
+}
+
+:host /deep/ .page-item.active .page-link, .pagination li.active .page-link {
+  background-color: #6f93c5 !important;
+  border-color: #6f93c5 !important;
+}
+
+:host /deep/ .pagination-sm .page-link, .pagination-sm .pagination-datatables li a, .pagination-datatables li .pagination-sm a, .pagination-sm .pagination li a, .pagination li .pagination-sm a {
+  padding: 0.1rem 0.4rem !important;
+  font-size: 0.7rem !important;
+}
+
+:host /deep/ .measurement-header {
+  background-color: #67bc9a;
+  color: white;
+}
+
+:host /deep/ .mydrp {
+  top: 8px;
+}
+
+:host /deep/ .picker-button {
+  background-color: #ffffff;
+  padding: 0px 1px 0px 1px;
   border-radius: 10px;
+  margin-bottom: 0px;
+  color: #000000;
   border-color: transparent;
-  background-color: transparent;
 }
 
-button:hover {
-  background-color: #cfd8dc;
+:host /deep/ .picker-button:hover {
+  background-color: #969696;
+
 }
 
-button:disabled {
-  background-color: #eee;
-  color: #aaa;
-  cursor: auto;
+:host /deep/ .picker-button-selected {
+  background-color: #67bc9a;
+  color: white;
 }
 
-.mypagination {
+:host /deep/ .picker-button-selected:hover {
+  background-color: #67bc9a;
+
 }
+
+:host /deep/ .vis-selected {
+  border-color: #67bc9a;
+  border-width: 2px;
+  border-radius: 10px;
+}
+
+:host /deep/ .table-sm td {
+  padding: 0.05rem;
+}
+
+:host /deep/ .table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 0rem;
+}
+
+:host /deep/ .table th,
+:host /deep/ .table td {
+  padding: 0.05rem;
+}
+
+:host /deep/ .table tfoot {
+  padding: 0.05rem;
+}
+
+
+
+
+
