--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header w3-orange w3-center">
+  <div class="card-header info-header w3-center">
     <div class="vericaltext" i18n="Patient Clinicians History"><i class="fa fa-medkit"></i> Patient Clinicians History
 
       <span class="w3-right">
