--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -1,6 +1,6 @@
-<div class="card w3-light-gray">
+<div class="card ">
 
-  <div class="card-header w3-blue">
+  <div class="card-header measurement-header">
 
     <div class="w3-center" i18n="Patient's Treatment History">
       <i class="fa fa-hospital-o"></i>
@@ -58,7 +58,7 @@
 
   </div>
 
-  <div class="card-footer">
+  <div class="card-footer w3-white">
     <div class="w3-tiny w3-right">Scroll the timeline draging it with mouse. Zoom using Alt key + mouse scroll. Click
       chosen treatment to view it's details.
     </div>
