--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -91,7 +91,7 @@
       class="col-xs-12 col-sm-12 col-md-12
       col-lg-12 col-xl-12">
       <div class="card">
-        <div class="card-header w3-blue  w3-center">
+        <div class="card-header measurement-header  w3-center">
           <div><i class="fa fa-heartbeat"></i>
             Patient Measurements and Recordings - Separate Charts
           </div>
