--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -29,21 +29,21 @@
 
 
   </div>
-  <div *ngIf="patientData" class="card-block">
+  <div class="card-block">
     <div class="animated fadeIn">
       <div class="row">
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
 
           <div class=" text-patient-info w3-border-bottom  ">
                       <span class="text-muted text-uppercase  font-weight-bold font-xs " i18n="Name">Name:
-                      </span>
-            {{patientData.name}}
+                      </span><span *ngIf="patientData">
+            {{patientData.name}}</span>
           </div>
 
 
           <div class=" text-patient-info w3-border-bottom ">
             <span class="text-muted text-uppercase  font-weight-bold font-xs " i18n="Id">ID:</span>
-            {{patientData.id}}
+            <span *ngIf="patientData">{{patientData.id}}</span>
           </div>
 
 
@@ -51,7 +51,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="bloodType">
                     blood type:
                   </span>
-            {{patientData.bloodType}}
+            <span *ngIf="patientData">{{patientData.bloodType}}</span>
           </div>
         </div>
         <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
@@ -60,7 +60,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="DOB">Date Of
                     Birth:
                   </span>
-            {{patientData.dob | date:'d.M.y'}}
+            <span *ngIf="patientData">{{patientData.dob | date:'d.M.y'}}</span>
           </div>
 
 
@@ -68,7 +68,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="height">
                     height:
                   </span>
-            {{patientData.height}}
+            <span *ngIf="patientData">{{patientData.height}}</span>
           </div>
 
 
@@ -76,7 +76,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="gender">
                     gender:
                   </span>
-            {{patientData.gender}}
+            <span *ngIf="patientData">{{patientData.gender}}</span>
           </div>
 
 
@@ -89,7 +89,7 @@
                       <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="insurer">
                         Insurer:
                       </span>
-            {{patientData.insurer}}
+            <span *ngIf="patientData">{{patientData.insurer}}</span>
           </div>
 
 
@@ -97,7 +97,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="insurer ID">
                     Insurer ID:
                   </span>
-            {{patientData.insurerId}}
+            <span *ngIf="patientData">{{patientData.insurerId}}</span>
           </div>
 
 
@@ -105,7 +105,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="occupancy">
                     occupancy:
                   </span>
-            {{patientData.occupancy}}
+            <span *ngIf="patientData">{{patientData.occupancy}}</span>
           </div>
 
         </div>
@@ -115,7 +115,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="lives alone">
                     lives alone:
                   </span>
-            {{patientData.livesAlone==="true"? "Yes":"No" }}
+            <span *ngIf="patientData">{{patientData.livesAlone==="true"? "Yes":"No" }}</span>
           </div>
 
           <div class="w3-border-bottom ">
@@ -124,7 +124,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="Address">
                     Patient Address:
                   </span>
-              {{patientData.address}}
+              <span *ngIf="patientData">{{patientData.address}}</span>
             </div>
 
 
