--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div *ngIf="headerText || (progress.percentage < 100)" class="card-header measurement-header  w3-center">
+  <div *ngIf="headerText || (progress.percentage < 100)" class="card-header measurement-header  ">
 
     <div><i class="fa fa-heartbeat"></i>
 
@@ -34,7 +34,7 @@
 
           <!--
           <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
-                  class="btn btn-default"
+                  class="button-clear"
                   (click)="clearAll()">
             <i class="fa fa-minus-circle"></i>
             Clear all
@@ -45,7 +45,7 @@
 
 
           <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
-                  class="btn btn-default"
+                  class="button-clear"
                   (click)="showHighContrast()">
 
             <span *ngIf="isHighContrast">
@@ -67,7 +67,7 @@
 
 
           <button *ngIf="isThereMid || isThereMax || isThereMin" type="button"
-                  class="btn btn-default"
+                  class="button-clear"
                   (click)="resetMinMidMax()">
             <span>  <i class="fa {{showMinMidMax?'fa-circle':'fa-circle-o'}}"></i> </span>
             <span *ngIf="!showMinMidMax"></span> <span *ngIf="showMinMidMax"></span> <span *ngIf="isThereMin">Min</span>
@@ -77,7 +77,7 @@
           </button>
 
           <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
-                  class="btn btn-default"
+                  class="button-clear"
                   (click)="forceYZero=!forceYZero;reloadDataToGraph()">
 
             <span>  <i class="fa {{forceYZero?'fa-circle':'fa-circle-o'}}"></i> </span> Zero axis
@@ -86,21 +86,23 @@
 
 
         <div *ngIf="observationGroups && observationGroups.length!==1"
-             class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"
+             class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6"
              style=" padding-right: 0.05rem; padding-bottom: 0.15rem;">
           <div class="" style=" margin-left: 0.25rem;">
 
             <!--
             <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
-                    class="btn btn-default"
+                    class="button-clear"
                     (click)="showAllLeft()">
 
               <i class="fa fa-plus-circle"></i> Show all on left axis
             </button>
             -->
 
+            <span class="button-header">Left Axis</span>
+
             <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
-                    class="btn btn-default"
+                    class="button-clear"
                     (click)="showAllLeft()">
 
               <i class="fa fa-plus-circle"></i> Show all values
@@ -108,7 +110,7 @@
 
             <span *ngFor="let group of observationGroups">
 
-            <button type="button" class="btn btn-default"
+            <button type="button" class="button-clear"
                     (click)="toggleLeft(group.id, group.name)">
               <span [style.color]="isHighContrast?'red':group.color">
                 <i class="fa {{group.showLeft?'fa-circle':'fa-circle-o'}}"></i>
@@ -123,13 +125,13 @@
 
 
         <div *ngIf="observationGroups && observationGroups.length!==1"
-             class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"
+             class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6"
              style="padding-left: 0.05rem; padding-bottom: 0.15rem;">
           <div class="" style=" margin-right: 0.25rem;">
             <!--
              <button *ngIf="observationGroups && observationGroups.length!==1"
                      type="button"
-                     class="btn btn-default"
+                     class="button-clear"
                      (click)="showAllRight()"><i class="fa fa-plus-circle"></i> Show all on right axis
              </button>
              -->
@@ -141,7 +143,7 @@
 
             <button
               type="button"
-              class="btn btn-default"
+              class="button-clear"
               (click)="toggleRight(group.id, group.name)">
               <span [style.color]="isHighContrast?'green':group.color">
                                 <i class="fa {{group.showRight?'fa-circle':'fa-circle-o'}}"></i>
