--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header info-header  w3-center">
+  <div class="card-header info-header  ">
     <div i18n="Patient Diseases"><i class="fa fa-medkit"></i> Patient Diseases
 
       <span class="w3-right">
@@ -15,7 +15,7 @@
     </div>
 
   </div>
-  <div class="card-block" style="overflow-x: auto">
+  <div class="card-block shorter" style="overflow-x: auto">
 
     <!--
         <div class="row">
