--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -1,9 +1,9 @@
 <div class="card">
 
-  <div class="card-header measurement-header  w3-center">
+  <div class="card-header measurement-header  ">
 
 
-    <div class="w3-center" i18n="Patient Medication History"><i class="fa fa-medkit"> </i>
+    <div class="" i18n="Patient Medication History"><i class="fa fa-medkit"> </i>
       Patient Medication History
 
       <span class="w3-right">
@@ -23,6 +23,29 @@
 
   <div class="card-block">
 
+    <div class="w3-center">
+      <button type="button"
+              class="button-clear"
+              (click)="toggleColor()">
+
+    <span *ngIf="isColourful">
+              <span style="color:red"> <i class="fa fa-circle"></i></span>
+              <span style="color:red"> <i class="fa fa-circle"></i></span>
+              <span style="color:green"> <i class="fa fa-circle"></i></span>
+              <span style="color:green"> <i class="fa fa-circle"></i></span>
+            </span>
+        <span *ngIf="!isColourful">
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+            </span>
+        Colours
+
+      </button>
+
+    </div>
+
     <div class="col-xs-12 col-sm-12 col-md-{{selectedMedication?'6':12}}
     col-lg-{{selectedMedication?'6':12}} col-xl-{{selectedMedication?'8':12}}">
       <div [visTimeline]="visTimelineMedications"
@@ -36,12 +59,12 @@
          class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 detail-view">
       <div class="w3-border-bottom">
         Selected Medication details
-        <button class="w3-right" (click)="close()"><i class="fa fa-close"></i></button>
+        <button class="w3-right button-clear" (click)="close()"><i class="fa fa-close"></i></button>
       </div>
-      <div class="{{animateToggle?'myanimation1':'myanimation2'}} ">
+      <div class="{{animateToggle?'my-animate-left':'my-animate-left2'}} ">
 
-        <samp>
-          <div>{{selectedMedication.name}}</div>
+
+        <div>{{selectedMedication.name}}</div>
           <div *ngIf="selectedMedication.disease">Disease: {{selectedMedication.disease}}</div>
           <div *ngIf="selectedMedication.prescribedBy">Prescribed by: {{selectedMedication.prescribedBy}}</div>
           <div *ngIf="selectedMedication.dosage">Dosage: {{selectedMedication.dosage}}</div>
@@ -55,7 +78,7 @@
           </div>
           <div *ngIf="selectedMedication.endDate">To: {{selectedMedication.endDate| date:'d.M.y'}}</div>
 
-        </samp>
+
       </div>
 
     </div>
