--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header info-header  w3-center">
+  <div class="card-header info-header ">
 
 
     <span i18n="PatientData Info"><i class="fa fa-user"></i>
@@ -30,9 +30,9 @@
 
   </div>
   <div class="card-block">
-    <div class="animated fadeIn">
-      <div class="row">
-        <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+    <div class="fadeIn">
+      <div class="row detail-view">
+        <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3 ">
 
           <div class=" text-patient-info w3-border-bottom  ">
                       <span class="text-muted text-uppercase  font-weight-bold font-xs " i18n="Name">Name:
@@ -43,7 +43,7 @@
 
           <div class=" text-patient-info w3-border-bottom ">
             <span class="text-muted text-uppercase  font-weight-bold font-xs " i18n="Id">ID:</span>
-            <span *ngIf="patientData">{{patientData.id}}</span>
+            <span class="" *ngIf="patientData">{{patientData.id}}</span>
           </div>
 
 
