--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -2,7 +2,7 @@
 
   <div class="card-header measurement-header">
 
-    <div class="w3-center" i18n="Patient's Treatment History">
+    <div class="" i18n="Patient's Treatment History">
       <i class="fa fa-hospital-o"></i>
       Patient's Treatment History
       <span class="w3-right">
@@ -21,6 +21,29 @@
   </div>
 
   <div class="card-block">
+    <div class="w3-center">
+      <button type="button"
+              class="button-clear"
+              (click)="toggleColor()">
+
+    <span *ngIf="isColourful">
+              <span style="color:red"> <i class="fa fa-circle"></i></span>
+              <span style="color:red"> <i class="fa fa-circle"></i></span>
+              <span style="color:green"> <i class="fa fa-circle"></i></span>
+              <span style="color:green"> <i class="fa fa-circle"></i></span>
+            </span>
+        <span *ngIf="!isColourful">
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+              <span style="color: grey;"> <i class="fa fa-circle"></i></span>
+            </span>
+        Colours
+
+      </button>
+
+    </div>
+
 
     <div class="col-xs-12 col-sm-12 col-md-{{selectedTreatment?'6':12}}
     col-lg-{{selectedTreatment?'6':12}} col-xl-{{selectedTreatment?'8':12}}">
@@ -36,12 +59,12 @@
 
       <div class="w3-border-bottom">
         <div>Selected Treatment Details
-          <button class="w3-right" (click)="close()"><i class="fa fa-close"></i></button>
+          <button class="w3-right button-clear" (click)="close()"><i class="fa fa-close"></i></button>
         </div>
       </div>
-      <div class="{{animateToggle?'myanimation1':'myanimation2'}} ">
-        <samp>
-          <div *ngIf="selectedTreatment.startDate">{{selectedTreatment.endDate?'From:':'Date:'}}
+      <div class="{{animateToggle?'my-animate-left':'my-animate-left2'}} ">
+
+        <div *ngIf="selectedTreatment.startDate">{{selectedTreatment.endDate?'From:':'Date:'}}
             {{selectedTreatment.startDate| date:'d.M.y'}}
           </div>
           <div *ngIf="selectedTreatment.endDate">To: {{selectedTreatment.endDate| date:'d.M.y'}}</div>
@@ -50,7 +73,7 @@
           <div>Treatment: {{selectedTreatment.visitReason}}</div>
           <div>Results:</div>
         <div *ngFor="let result of selectedTreatment.visitResults">{{result.type}} - {{result.result}}</div>
-        </samp>
+
       </div>
 
 
