--- a/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header info-header w3-center">
+  <div class="card-header info-header ">
     <div i18n="Concluding Comments "><i class="fa fa-medkit"></i> Follow-up Appointments
 
       <span class="w3-right">
@@ -14,7 +14,7 @@
     </div>
 
   </div>
-  <div class="card-block" style="overflow-x: auto;">
+  <div class="card-block shorter" style="overflow-x: auto;">
 
     <table class="table table-striped  table-sm" [mfData]="followUps" #mf="mfDataTable"
            [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
