--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -91,7 +91,7 @@
       class="col-xs-12 col-sm-12 col-md-12
       col-lg-12 col-xl-12">
       <div class="card">
-        <div class="card-header measurement-header  w3-center">
+        <div class="card-header measurement-header  ">
           <div><i class="fa fa-heartbeat"></i>
             Patient Measurements and Recordings - Separate Charts
           </div>
@@ -169,8 +169,10 @@
   </div>
 
   <div *ngIf="cardToShow==='morisky' || cardToShow === 'all'" class="row">
-    <patient-daily-average-observations [forMeasurements]='"morisky"' [singleValued]="true" [dateRange]="range">
-    </patient-daily-average-observations>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-daily-average-observations [forMeasurements]='"morisky"' [singleValued]="true" [dateRange]="range">
+      </patient-daily-average-observations>
+    </div>
   </div>
 
   <div *ngIf="cardToShow==='diseases' || cardToShow === 'all'" class="row">
